# rag-vs-llamaindex-lab

./: .gitignore  README.md  main.py  pyproject.toml
comparisons/: chunking_comparison.md  latency_analysis.md  retrieval_quality.md
latency/: 00_latency_benchmark.ipynb  latency_analysis.md
llamaindex_rag/: 01_basic_pipeline.ipynb  02_custom_chunking.ipynb  02_query_engine.ipynb  03_retrieval_and_query.ipynb  03_retrievers.ipynb
pure_rag/: 01_basic_pipeline.ipynb  02_chunking.py  03_retrieval.py  chunking_utils.py  retrieval_utils.py
