[project]
name = "rag-vs-llamaindex-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "google-genai>=1.68.0",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "llama-index>=0.14.19",
    "llama-index-embeddings-gemini>=0.4.2",
    "llama-index-embeddings-google-genai>=0.5.0",
    "llama-index-llms-gemini>=0.6.2",
    "llama-index-llms-google-genai>=0.9.1",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.3",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
]
